Alternate fix that does away with overflow: hidden

--- a/styles.css
+++ b/styles.css
@@ -738,7 +738,6 @@ button.path-option {
   }
 
   > .item-background-decoration {
-    overflow: hidden;
     position: absolute;
     left: 0;
     top: 0;
@@ -753,6 +752,7 @@ button.path-option {
       position: absolute;
       inset: 0;
       z-index: 0;
+      border-radius: 6px 6px 0 0;
     }
 
     &::before {
@@ -769,7 +769,7 @@ button.path-option {
       background: linear-gradient(to bottom, #0000, #0008 90%, black 100%);
 
       /* Ensure this fully covers the decoration background edge */
-      margin-bottom: -2px;
+      margin-bottom: -1px;
     }
   }
 
